Fix square layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
     height: 100%;
     min-height: 100vh;
     box-sizing: border-box;
-    padding: 40px;
 }
 
 .left {
